<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Signup">

    <TextView
        android:id="@+id/txt_error_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5sp"
        android:paddingHorizontal="5sp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/signup_art"
        app:layout_constraintBottom_toTopOf="@+id/form_signup"/>

    <LinearLayout
        android:id="@+id/form_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_form_border"
        android:orientation="vertical"
        android:elevation="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_error_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/box_username_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"
            android:textSize="16sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Username" />

        <EditText
            android:id="@+id/box_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50sp"
            android:layout_marginVertical="5sp"
            android:textSize="16sp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/box_repassword_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50sp"
            android:layout_marginVertical="5sp"
            android:textSize="16sp"
            android:ems="10"
            android:hint="Repeat Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/box_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50sp"
            android:layout_marginVertical="5sp"
            android:textSize="16sp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="E-mail"
            android:autofillHints=""/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5sp"
            android:layout_marginHorizontal="50sp"
            android:elevation="15sp"
            android:background="@drawable/button_border_other"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/btn_signup" />

        <TextView
            android:id="@+id/txt_back_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="20sp"
            android:layout_marginHorizontal="30sp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:clickable="true"
            android:textStyle="bold"
            android:text="@string/back" />
    </LinearLayout>

    <ImageView
        android:id="@+id/signup_art"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20sp"
        android:contentDescription="@string/signup_art"
        app:srcCompat="@drawable/signup_art"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_error_signup"/>



</androidx.constraintlayout.widget.ConstraintLayout>