<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customListView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".kotlin.MainActivity">

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/white"
        android:gravity="center"
        android:elevation="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/search_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:paddingStart="20sp"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/icon_search"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:contentDescription="@string/search"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/search"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txt_search"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="SEARCH"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipes_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/icon_recipes"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="5dp"
                android:contentDescription="@string/recipes"
                android:scaleType="fitCenter"
                android:src="@drawable/recipe_selected"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txt_recipes"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="12sp"
                android:text="RECIPES"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/orange"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cooking_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:paddingEnd="20sp"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/icon_cooking"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:contentDescription="@string/cook"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/cooking"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txt_cooking"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="LET'S COOK"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>